fix: the filter is correct now and the documentation is according to filter
